--- a/src/main/webapp/app/entities/activity/activity-update.component.html
+++ b/src/main/webapp/app/entities/activity/activity-update.component.html
@@ -1,7 +1,8 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
-            <h2 id="jhi-activity-heading" jhiTranslate="imputationSqliApp.activity.home.createOrEditLabel">Create or edit a Activity</h2>
+            <h2 *ngIf="!activity.id" id="jhi-activity-heading" jhiTranslate="imputationSqliApp.activity.home.createLabel">Create or edit a Activity</h2>
+            <h2 *ngIf="activity.id" id="jhi-activity-heading" jhiTranslate="imputationSqliApp.activity.home.createOrEditLabel">Create or edit a Activity</h2>
             <div>
                 <jhi-alert-error></jhi-alert-error>
                 <div class="form-group" [hidden]="!activity.id">
