--- a/src/main/webapp/app/entities/collaborator/collaborator-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/collaborator/collaborator-delete-dialog.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <p id="jhi-delete-collaborator-heading" jhiTranslate="imputationSqliApp.collaborator.delete.question" [translateValues]="{id: collaborator.id}">Are you sure you want to delete this Collaborator?</p>
+        <p id="jhi-delete-collaborator-heading" jhiTranslate="imputationSqliApp.collaborator.delete.question" [translateValues]="{id: collaborator.firstname + ' '+ collaborator.lastname}">Are you sure you want to delete this Collaborator?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
