--- a/src/main/webapp/app/entities/correspondence/correspondence-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/correspondence/correspondence-delete-dialog.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <p id="jhi-delete-correspondence-heading" jhiTranslate="imputationSqliApp.correspondence.delete.question" [translateValues]="{id: correspondence.id}">Are you sure you want to delete this Correspondence?</p>
+        <p id="jhi-delete-correspondence-heading" jhiTranslate="imputationSqliApp.correspondence.delete.question" [translateValues]="{id: correspondence.collaborator.firstname + ' '+ correspondence.collaborator.firstname}">Are you sure you want to delete this Correspondence?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
