--- a/src/main/webapp/app/entities/correspondence/correspondence.component.html
+++ b/src/main/webapp/app/entities/correspondence/correspondence.component.html
@@ -1,7 +1,7 @@
 <div>
     <h2 id="page-heading">
         <span jhiTranslate="imputationSqliApp.correspondence.home.title">Correspondences</span>
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-correspondence" [routerLink]="['/correspondence/new']">
+        <button *jhiHasAnyAuthority="'ROLE_ADMIN'" id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-correspondence" [routerLink]="['/correspondence/new']">
             <fa-icon [icon]="'plus'"></fa-icon>
             <span  jhiTranslate="imputationSqliApp.correspondence.home.createLabel">
             Create new Correspondence
@@ -30,7 +30,7 @@
                 <td>{{correspondence.idTBP}}</td>
                 <td>
                     <div *ngIf="correspondence.collaborator">
-                        <a [routerLink]="['../collaborator', correspondence.collaborator?.id, 'view' ]" >{{correspondence.collaborator?.id}}</a>
+                        <a [routerLink]="['../collaborator', correspondence.collaborator?.id, 'view' ]" >{{correspondence.collaborator?.firstname + ' ' + correspondence.collaborator?.lastname}}</a>
                     </div>
                 </td>
                 <td class="text-right">
@@ -41,13 +41,13 @@
                             <fa-icon [icon]="'eye'"></fa-icon>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
-                        <button type="submit"
+                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'" type="submit"
                                 [routerLink]="['/correspondence', correspondence.id, 'edit']"
                                 class="btn btn-primary btn-sm">
                             <fa-icon [icon]="'pencil-alt'"></fa-icon>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
-                        <button type="submit"
+                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'" type="submit"
                                 [routerLink]="['/', 'correspondence', { outlets: { popup: correspondence.id + '/delete'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
