render collabs list of a team with access restriction and detail

--- a/src/main/webapp/app/entities/collaborator/collaborator-detail.component.html
+++ b/src/main/webapp/app/entities/collaborator/collaborator-detail.component.html
@@ -37,7 +37,8 @@
                 <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back"> Back</span>
             </button>
 
-            <button type="button"
+            <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                    type="button"
                     [routerLink]="['/collaborator', collaborator.id, 'edit']"
                     class="btn btn-primary">
                 <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit"> Edit</span>
