--- a/src/main/webapp/app/entities/team/team-detail.component.html
+++ b/src/main/webapp/app/entities/team/team-detail.component.html
@@ -12,10 +12,62 @@
                 <dt><span jhiTranslate="imputationSqliApp.team.deliveryCoordinator">Delivery Coordinator</span></dt>
                 <dd>
                     <div *ngIf="team.deliveryCoordinator">
-                        <a [routerLink]="['/delivery-coordinator', team.deliveryCoordinator?.id, 'view']">{{team.deliveryCoordinator?.id}}</a>
+                        <a routerLink="/admin/user-management/{{team.deliveryCoordinator?.login}}/view">{{team.deliveryCoordinator?.firstName}} {{team.deliveryCoordinator?.lastName}}</a>
                     </div>
                 </dd>
             </dl>
+
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                    <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse">
+                        <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                        <th jhiSortBy="firstname"><span jhiTranslate="imputationSqliApp.collaborator.firstname">Firstname</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                        <th jhiSortBy="lastname"><span jhiTranslate="imputationSqliApp.collaborator.lastname">Lastname</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                        <th jhiSortBy="email"><span jhiTranslate="imputationSqliApp.collaborator.email">Email</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                        <th jhiSortBy="activity.id"><span jhiTranslate="imputationSqliApp.collaborator.activity">Activity</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let collaborator of team.collaborators ;trackBy: trackId">
+                        <td><a [routerLink]="['/collaborator', collaborator.id, 'view' ]">{{collaborator.id}}</a></td>
+                        <td>{{collaborator.firstname}}</td>
+                        <td>{{collaborator.lastname}}</td>
+                        <td>{{collaborator.email}}</td>
+                        <td>
+                            <div *ngIf="collaborator.activity">
+                                <a [routerLink]="['/activity', collaborator.activity?.id, 'view' ]" >{{collaborator.activity?.name}}</a>
+                            </div>
+                        </td>
+                        <td class="text-right">
+                            <div class="btn-group flex-btn-group-container">
+                                <button type="submit"
+                                        [routerLink]="['/collaborator', collaborator.id, 'view' ]"
+                                        class="btn btn-info btn-sm">
+                                    <fa-icon [icon]="'eye'"></fa-icon>
+                                    <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
+                                </button>
+                                <button *jhiHasAnyAuthority="'ROLE_ADMIN'" type="submit"
+                                        [routerLink]="['/collaborator', collaborator.id, 'edit']"
+                                        class="btn btn-primary btn-sm">
+                                    <fa-icon [icon]="'pencil-alt'"></fa-icon>
+                                    <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
+                                </button>
+                                <button *jhiHasAnyAuthority="'ROLE_ADMIN'" type="submit"
+                                        [routerLink]="['/', 'collaborator', { outlets: { popup: collaborator.id + '/delete'} }]"
+                                        replaceUrl="true"
+                                        queryParamsHandling="merge"
+                                        class="btn btn-danger btn-sm">
+                                    <fa-icon [icon]="'times'"></fa-icon>
+                                    <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
+                                </button>
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
 
             <button type="submit"
                     (click)="previousState()"
@@ -23,7 +75,8 @@
                 <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back"> Back</span>
             </button>
 
-            <button type="button"
+            <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                    type="button"
                     [routerLink]="['/team', team.id, 'edit']"
                     class="btn btn-primary">
                 <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit"> Edit</span>
