--- a/src/main/webapp/app/entities/correspondence/correspondence.component.html
+++ b/src/main/webapp/app/entities/correspondence/correspondence.component.html
@@ -1,72 +1,86 @@
 <div>
     <h2 id="page-heading">
         <span jhiTranslate="imputationSqliApp.correspondence.home.title">Correspondences</span>
-        <button *jhiHasAnyAuthority="'ROLE_ADMIN'" id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-correspondence" [routerLink]="['/correspondence/new']">
+        <input #searchedKey type="text" (keyup)="findBySearchedKey(searchedKey.value)" placeholder="Search">
+        <button *jhiHasAnyAuthority="'ROLE_ADMIN'" id="jh-create-entity"
+            class="btn btn-primary float-right jh-create-entity create-correspondence"
+            [routerLink]="['/correspondence/new']">
             <fa-icon [icon]="'plus'"></fa-icon>
-            <span  jhiTranslate="imputationSqliApp.correspondence.home.createLabel">
-            Create new Correspondence
+            <span jhiTranslate="imputationSqliApp.correspondence.home.createLabel">
+                Create new Correspondence
             </span>
         </button>
     </h2>
     <jhi-alert></jhi-alert>
-    <br/>
+    <br />
     <div class="table-responsive" *ngIf="correspondences">
         <table class="table table-striped">
             <thead>
-            <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-            <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="idAPP"><span jhiTranslate="imputationSqliApp.correspondence.idAPP">Id APP</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="idPPMC"><span jhiTranslate="imputationSqliApp.correspondence.idPPMC">Id PPMC</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="idTBP"><span jhiTranslate="imputationSqliApp.correspondence.idTBP">Id TBP</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="collaborator.id"><span jhiTranslate="imputationSqliApp.correspondence.collaborator">Collaborator</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th></th>
-            </tr>
+                <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
+                    <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <th jhiSortBy="idAPP"><span jhiTranslate="imputationSqliApp.correspondence.idAPP">Id APP</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <th jhiSortBy="idPPMC"><span jhiTranslate="imputationSqliApp.correspondence.idPPMC">Id PPMC</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <th jhiSortBy="idTBP"><span jhiTranslate="imputationSqliApp.correspondence.idTBP">Id TBP</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <th jhiSortBy="collaborator.id"><span
+                            jhiTranslate="imputationSqliApp.correspondence.collaborator">Collaborator</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <th></th>
+                </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let correspondence of correspondences ;trackBy: trackId">
-                <td><a [routerLink]="['/correspondence', correspondence.id, 'view' ]">{{correspondence.id}}</a></td>
-                <td>{{correspondence.idAPP}}</td>
-                <td>{{correspondence.idPPMC}}</td>
-                <td>{{correspondence.idTBP}}</td>
-                <td>
-                    <div *ngIf="correspondence.collaborator">
-                        <a [routerLink]="['../collaborator', correspondence.collaborator?.id, 'view' ]" >{{correspondence.collaborator?.firstname + ' ' + correspondence.collaborator?.lastname}}</a>
-                    </div>
-                </td>
-                <td class="text-right">
-                    <div class="btn-group flex-btn-group-container">
-                        <button type="submit"
-                                [routerLink]="['/correspondence', correspondence.id, 'view' ]"
+                <tr *ngFor="let correspondence of correspondences ;trackBy: trackId">
+                    <td><a [routerLink]="['/correspondence', correspondence.id, 'view' ]">{{correspondence.id}}</a></td>
+                    <td>{{correspondence.idAPP}}</td>
+                    <td>{{correspondence.idPPMC}}</td>
+                    <td>{{correspondence.idTBP}}</td>
+                    <td>
+                        <div *ngIf="correspondence.collaborator">
+                            <a
+                                [routerLink]="['../collaborator', correspondence.collaborator?.id, 'view' ]">{{correspondence.collaborator?.firstname + ' ' + correspondence.collaborator?.lastname}}</a>
+                        </div>
+                    </td>
+                    <td class="text-right">
+                        <div class="btn-group flex-btn-group-container">
+                            <button type="submit" [routerLink]="['/correspondence', correspondence.id, 'view' ]"
                                 class="btn btn-info btn-sm">
-                            <fa-icon [icon]="'eye'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-                        </button>
-                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'" type="submit"
+                                <fa-icon [icon]="'eye'"></fa-icon>
+                                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
+                            </button>
+                            <button *jhiHasAnyAuthority="'ROLE_ADMIN'" type="submit"
                                 [routerLink]="['/correspondence', correspondence.id, 'edit']"
                                 class="btn btn-primary btn-sm">
-                            <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-                        </button>
-                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'" type="submit"
+                                <fa-icon [icon]="'pencil-alt'"></fa-icon>
+                                <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
+                            </button>
+                            <button *jhiHasAnyAuthority="'ROLE_ADMIN'" type="submit"
                                 [routerLink]="['/', 'correspondence', { outlets: { popup: correspondence.id + '/delete'} }]"
-                                replaceUrl="true"
-                                queryParamsHandling="merge"
-                                class="btn btn-danger btn-sm">
-                            <fa-icon [icon]="'times'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-                        </button>
-                    </div>
-                </td>
-            </tr>
+                                replaceUrl="true" queryParamsHandling="merge" class="btn btn-danger btn-sm">
+                                <fa-icon [icon]="'times'"></fa-icon>
+                                <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
+                            </button>
+                        </div>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
     <div *ngIf="correspondences && correspondences.length">
         <div class="row justify-content-center">
-            <jhi-item-count [page]="page" [total]="totalItems" [maxSize]="5" [itemsPerPage]="itemsPerPage"></jhi-item-count>
+            <jhi-item-count [page]="page" [total]="totalItems" [maxSize]="5" [itemsPerPage]="itemsPerPage">
+            </jhi-item-count>
         </div>
         <div class="row justify-content-center">
-            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5" [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>
+            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5"
+                [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>
         </div>
     </div>
 </div>
