--- a/src/main/webapp/app/entities/team/team.component.html
+++ b/src/main/webapp/app/entities/team/team.component.html
@@ -1,90 +1,90 @@
 <div>
     <h2 id="page-heading">
         <span jhiTranslate="imputationSqliApp.team.home.title">Teams</span>
-        <button *jhiHasAnyAuthority="'ROLE_ADMIN'" id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-team"
-                [routerLink]="['/team/new']">
+        <input #searchedKey type="text" (keyup)="findBySearchedKey(searchedKey.value)" placeholder="Search">
+        <button *jhiHasAnyAuthority="'ROLE_ADMIN'" id="jh-create-entity"
+            class="btn btn-primary float-right jh-create-entity create-team" [routerLink]="['/team/new']">
             <fa-icon [icon]="'plus'"></fa-icon>
             <span jhiTranslate="imputationSqliApp.team.home.createLabel">
-            Create new Team
+                Create new Team
             </span>
         </button>
     </h2>
     <jhi-alert></jhi-alert>
-    <br/>
+    <br />
     <div class="table-responsive" *ngIf="teams">
         <table class="table table-striped">
             <thead>
-            <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-                <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="name"><span jhiTranslate="imputationSqliApp.team.name">Name</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="name"><span jhiTranslate="imputationSqliApp.team.agresso">Agresso</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="name"><span jhiTranslate="imputationSqliApp.team.projectType">Project Type</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="deliveryCoordinator.id"><span jhiTranslate="imputationSqliApp.team.deliveryCoordinator">Delivery Coordinator</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th></th>
-            </tr>
+                <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
+                    <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <th jhiSortBy="name"><span jhiTranslate="imputationSqliApp.team.name">Name</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <th jhiSortBy="name"><span jhiTranslate="imputationSqliApp.team.agresso">Agresso</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <th jhiSortBy="name"><span jhiTranslate="imputationSqliApp.team.projectType">Project Type</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <th jhiSortBy="deliveryCoordinator.id"><span
+                            jhiTranslate="imputationSqliApp.team.deliveryCoordinator">Delivery Coordinator</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <th></th>
+                </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let team of teams ;trackBy: trackId">
-                <td><a [routerLink]="['/team', team.id, 'view' ]">{{team.id}}</a></td>
-                <td>{{team.name}}</td>
-                <td>{{team.agresso}}</td>
-                <td>
-                    <div *ngIf="team.projectType">
-                        <a [routerLink]="['../project-type', team.projectType?.id, 'view' ]">{{team.projectType?.name}}</a>
-                    </div>
-                </td>
-                <td>
-                    <div *ngIf="team.deliveryCoordinator">
-                        <!--<a [routerLink]="['/admin/user-management', team.deliveryCoordinator?.login, 'view' ]">{{team.deliveryCoordinator?.firstName}} {{team.deliveryCoordinator?.lastName}}</a>-->
-                        <a routerLink="/admin/user-management/{{team.deliveryCoordinator?.login}}/view">{{team.deliveryCoordinator?.firstName}} {{team.deliveryCoordinator?.lastName}}</a>
-                    </div>
-                </td>
-                <td class="text-right">
-                    <div class="btn-group flex-btn-group-container">
-                        <button type="submit"
-                                [routerLink]="['/team', team.id, 'view' ]"
+                <tr *ngFor="let team of teams ;trackBy: trackId">
+                    <td><a [routerLink]="['/team', team.id, 'view' ]">{{team.id}}</a></td>
+                    <td>{{team.name}}</td>
+                    <td>{{team.agresso}}</td>
+                    <td>
+                        <div *ngIf="team.projectType">
+                            <a
+                                [routerLink]="['../project-type', team.projectType?.id, 'view' ]">{{team.projectType?.name}}</a>
+                        </div>
+                    </td>
+                    <td>
+                        <div *ngIf="team.deliveryCoordinator">
+                            <!--<a [routerLink]="['/admin/user-management', team.deliveryCoordinator?.login, 'view' ]">{{team.deliveryCoordinator?.firstName}} {{team.deliveryCoordinator?.lastName}}</a>-->
+                            <a routerLink="/admin/user-management/{{team.deliveryCoordinator?.login}}/view">{{team.deliveryCoordinator?.firstName}}
+                                {{team.deliveryCoordinator?.lastName}}</a>
+                        </div>
+                    </td>
+                    <td class="text-right">
+                        <div class="btn-group flex-btn-group-container">
+                            <button type="submit" [routerLink]="['/team', team.id, 'view' ]"
                                 class="btn btn-info btn-sm">
-                            <fa-icon [icon]="'eye'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/team', team.id, 'edit']"
+                                <fa-icon [icon]="'eye'"></fa-icon>
+                                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
+                            </button>
+                            <button type="submit" [routerLink]="['/team', team.id, 'edit']"
                                 class="btn btn-primary btn-sm">
-                            <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-                        </button>
-                        <button type="submit"
+                                <fa-icon [icon]="'pencil-alt'"></fa-icon>
+                                <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
+                            </button>
+                            <button type="submit"
                                 [routerLink]="['/', 'team', { outlets: { popup: team.id + '/delete'} }]"
-                                replaceUrl="true"
-                                queryParamsHandling="merge"
-                                class="btn btn-danger btn-sm">
-                            <fa-icon [icon]="'times'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-                        </button>
-                    </div>
-                </td>
-            </tr>
+                                replaceUrl="true" queryParamsHandling="merge" class="btn btn-danger btn-sm">
+                                <fa-icon [icon]="'times'"></fa-icon>
+                                <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
+                            </button>
+                        </div>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
     <div *ngIf="teams && teams.length">
         <div class="row justify-content-center">
-            <jhi-item-count [page]="page" [total]="totalItems" [maxSize]="5"
-                            [itemsPerPage]="itemsPerPage"></jhi-item-count>
+            <jhi-item-count [page]="page" [total]="totalItems" [maxSize]="5" [itemsPerPage]="itemsPerPage">
+            </jhi-item-count>
         </div>
         <div class="row justify-content-center">
             <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5"
-                            [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>
+                [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>
         </div>
     </div>
 </div>
