get allCollaborators with no correspondence list

--- a/src/main/webapp/app/entities/team/team.component.html
+++ b/src/main/webapp/app/entities/team/team.component.html
@@ -76,10 +76,10 @@
                     <th jhiSortBy="name"><span jhiTranslate="imputationSqliApp.team.name">Name</span>
                         <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
-                    <th jhiSortBy="name"><span jhiTranslate="imputationSqliApp.team.agresso">Agresso</span>
+                    <th jhiSortBy="agresso"><span jhiTranslate="imputationSqliApp.team.agresso">Agresso</span>
                         <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
-                    <th jhiSortBy="name"><span jhiTranslate="imputationSqliApp.team.projectType">Project Type</span>
+                    <th jhiSortBy="projectType.name"><span jhiTranslate="imputationSqliApp.team.projectType">Project Type</span>
                         <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th jhiSortBy="deliveryCoordinator.id"><span
