--- a/src/main/webapp/app/entities/team/team-detail.component.html
+++ b/src/main/webapp/app/entities/team/team-detail.component.html
@@ -21,11 +21,11 @@
                 <table class="table table-striped">
                     <thead>
                     <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse">
-                        <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-                        <th jhiSortBy="firstname"><span jhiTranslate="imputationSqliApp.collaborator.firstname">Firstname</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-                        <th jhiSortBy="lastname"><span jhiTranslate="imputationSqliApp.collaborator.lastname">Lastname</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-                        <th jhiSortBy="email"><span jhiTranslate="imputationSqliApp.collaborator.email">Email</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-                        <th jhiSortBy="activity.id"><span jhiTranslate="imputationSqliApp.collaborator.activity">Activity</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                        <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span></th>
+                        <th jhiSortBy="firstname"><span jhiTranslate="imputationSqliApp.collaborator.firstname">Firstname</span></th>
+                        <th jhiSortBy="lastname"><span jhiTranslate="imputationSqliApp.collaborator.lastname">Lastname</span></th>
+                        <th jhiSortBy="email"><span jhiTranslate="imputationSqliApp.collaborator.email">Email</span></th>
+                        <th jhiSortBy="activity.id"><span jhiTranslate="imputationSqliApp.collaborator.activity">Activity</span></th>
                         <th></th>
                     </tr>
                     </thead>
